@@ -330,6 +330,16 @@ xmode Context
 
 multi_line_specials 1
 
+# wxversion: request a specific wxPython version (used for -wthread)
+
+# Set this to the value of wxPython you want to use, but note that this
+# feature requires you to have the wxversion Python module to work.  If you
+# don't have the wxversion module (try 'import wxversion' at the prompt to
+# check) or simply want to leave the system to pick up the default, leave this
+# variable at 0.
+
+wxversion 0
+
 #---------------------------------------------------------------------------
 # Section: Readline configuration (readline is not available for MS-Windows)
 
