@@ -159,6 +159,7 @@ object? -> Details about 'object'. ?object also works, ?? prints more.
                     'separate_out2|so2=s xmode=s wildcards_case_sensitive! '
                     'magic_docstrings system_verbose! '
                     'multi_line_specials! '
+                    'wxversion=s '
                     'autoedit_syntax!')
 
     # Options that can *only* appear at the cmd line (not in rcfiles).
@@ -222,6 +223,7 @@ object? -> Details about 'object'. ?object also works, ?? prints more.
                       Version = 0,
                       xmode = 'Verbose',
                       wildcards_case_sensitive = 1,
+                      wxversion = '0',
                       magic_docstrings = 0,  # undocumented, for doc generation
                       )
     
